--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@types/uuid": "^3.4.6",
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.17.0",
+    "babel-core": "6.26.3",
+    "babel-loader": "8.2.1",
+    "bootstrap": "3.3.7",
     "chart.js": "^2.9.3",
     "cross-env": "^7.0.0",
     "disqus-react": "^1.0.7",
@@ -41,8 +44,7 @@
     "storybook-chromatic": "^3.4.1",
     "typeface-roboto": "0.0.75",
     "typescript": "^3.7.4",
-    "uuid": "^3.3.3",
-    "bootstrap": "3.3.7"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^5.3.0-rc.4",
